test/compile_errors/err_u64_literal_max_overflow.w
//! expect-error: integer literal does not fit suffix type

fn main:
    let _ = 18446744073709551616u64
